--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="logo center">
-                        <img src="spectre.PNG">
+                        <img src="spectre-logo.jpeg">
                     </div>
 
                     <div class="nav-container ">
@@ -50,7 +50,7 @@
                 <div class="work-pics-container center">
                     
                     <div class="first-proj">
-                        <a href="amazon-scraper.PNG">
+                        <a href="amazon-scraper.jpeg">
                             <img class="work-pic1" src="amazon-scraper-900.PNG">
                         </a>
                         <p>This is a project used to scrape data from amazon using a library called BeautifulSoup.</p>
@@ -59,7 +59,7 @@
                     <div class="faux-divider center"></div>
 
                     <div class="second-proj">
-                        <a href="amazon-project.PNG">
+                        <a href="amazon-project.jpeg">
                                 <img class="work-pic1" src="amazon-project-900.PNG">
                             </a>
                             <p>Here I used the data from my scraping data project to create a user inteface in command prompt.</p>
