--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div class="work-pics-container center">
                     
                     <div class="first-proj">
-                        <a href="amazon-scraper.jpeg">
-                            <img class="work-pic1" src="amazon-scraper-900.PNG">
+                        <a href="amazon-scraper.PNG">
+                            <img class="work-pic1" src="amazon-scraper-900.jpeg">
                         </a>
                         <p>This is a project used to scrape data from amazon using a library called BeautifulSoup.</p>
                     </div>
@@ -59,8 +59,8 @@
                     <div class="faux-divider center"></div>
 
                     <div class="second-proj">
-                        <a href="amazon-project.jpeg">
-                                <img class="work-pic1" src="amazon-project-900.PNG">
+                        <a href="amazon-project.PNG">
+                                <img class="work-pic1" src="amazon-project-900.jpeg">
                             </a>
                             <p>Here I used the data from my scraping data project to create a user inteface in command prompt.</p>
                     </div>
