--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Karla|Lato" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Spectre Design</title>
+        <link rel="shortcut icon" href="spectre-logo.jpeg">
 
     </head>
 
@@ -28,10 +29,10 @@
 
                     <div class="nav-container ">
                         <nav class="main-nav">
-                                <button class="button1">Home</button>
-                                <button class="button2">About</button>
-                                <button class="button3">Resume</button>
-                                <button class="button4">Contact</button>
+                                <a href="#" class="button1 myButton">Home</a>
+                                <a href="#" class="button2 myButton">About</a>
+                                <a href="#" class="button3 myButton">Resume</a>
+                                <a href="#" class="button4 myButton">Contact</a>
                         </nav>
                     </div>
                 </div>
