--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             <footer>
 
                 <div class="social-img">
-                    <a href="https://www.linkedin.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Linkedin_icon.svg/256px-Linkedin_icon.svg.png" alt="Linkedin" class="linkedin center"></a>
+                    <a href="https://www.linkedin.com/"><img src="https://orig00.deviantart.net/a1c3/f/2010/187/5/2/linkedin_by_orionsreverie.png" alt="Linkedin" class="linkedin center"></a>
             
-                    <a href="https://www.instagram.com/?hl=en"><img src="https://orig00.deviantart.net/0d09/f/2012/136/e/9/instagram_by_xloveneverfails-d4zziq7.png" alt="Instagram" class="instagram center"></a>
+                    <a href="https://twitter.com/"><img src="https://orig00.deviantart.net/da9a/f/2010/187/7/6/twitter_icon_by_orionsreverie.png" alt="Twitter" class="twitter center"></a>
                     
-                    <a href="https://www.facebook.com/"><img src="https://orig00.deviantart.net/3845/f/2007/336/c/6/facebook_button_by_givemegravity.png" alt="Facebook" class="facebook center"></a>
+                    <a href="https://www.facebook.com/"><img src="https://orig00.deviantart.net/4ba5/f/2010/187/8/a/twitter_by_orionsreverie.png" alt="Facebook" class="facebook center"></a>
                 </div>
 
             </footer>
