--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     
                     <div class="first-proj">
                         <a href="amazon-scraper.PNG">
-                            <img class="work-pic center" src="amazon-scraper-900.jpeg">
+                            <img class="work-pic" src="amazon-scraper-900.jpeg">
                         </a>
                         <p>This is a project used to scrape data from amazon using a library called BeautifulSoup.</p>
                     </div>
@@ -62,7 +62,7 @@
 
                     <div class="second-proj">
                         <a href="amazon-project.PNG">
-                                <img class="work-pic center" src="amazon-project-900.jpeg">
+                                <img class="work-pic" src="amazon-project-900.jpeg">
                             </a>
                             <p>Here I used the data from my scraping data project to create a user inteface in command prompt.</p>
                     </div>
