--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                 <div class="faux-divider3 center"></div>
 
                 <div class="social-img">
-                    <a href="https://www.linkedin.com/" id="linkedin-wrapper"><img src="C:\Users\coryd\Desktop\Web Dev\Spectre Design\corydm92.github.io\iconmonstr-linkedin-3-240.png" alt="Linkedin" class="linkedin center"></a>
+                    <a href="https://www.linkedin.com/" id="linkedin-wrapper"><img src="iconmonstr-linkedin-3-240.png" alt="Linkedin" class="linkedin center"></a>
             
-                    <a href="https://twitter.com/" id="twitter-wrapper"><img src="C:\Users\coryd\Desktop\Web Dev\Spectre Design\corydm92.github.io\iconmonstr-twitter-3-240.png" alt="Twitter" class="twitter center"></a>
+                    <a href="https://twitter.com/" id="twitter-wrapper"><img src="iconmonstr-twitter-3-240.png" alt="Twitter" class="twitter center"></a>
                     
-                    <a href="https://www.facebook.com/" id="facebook-wrapper"><img src="C:\Users\coryd\Desktop\Web Dev\Spectre Design\corydm92.github.io\iconmonstr-facebook-3-240.png" alt="Facebook" class="facebook center"></a>
+                    <a href="https://www.facebook.com/" id="facebook-wrapper"><img src="iconmonstr-facebook-3-240.png" alt="Facebook" class="facebook center"></a>
                 </div>
 
             </footer>
