--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Karla|Lato" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Spectre Design</title>
-        <link rel="shortcut icon" href="spectre-logo.jpeg">
+        <link rel="shortcut icon" href="iconmonstr-menu-1-240.png">
 
     </head>
 
@@ -25,7 +25,7 @@
                     </div>
 
                     <div class="logo center">
-                        <img src="spectre-logo.jpeg">
+                        <img src="iconmonstr-menu-1-240.png">
                     </div>
 
                     <div class="nav-container ">
@@ -86,7 +86,11 @@
                 </div>
 
             </footer>
+
         </div>
+
+        <script src="app.js"></script>
+
     </body>
 
 </html>
