desktop transition menu button working

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <img src="iconmonstr-menu-1-240.png">
                     </div>
 
-                    <div class="display-none unclicked" id="nav-container">
+                    <div class="unclicked" id="nav-container">
                         <nav class="main-nav">
                                 <a href="#" class="button1 myButton">Home</a>
                                 <a href="#" class="button2 myButton">About</a>
