--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             </div>
                     </div>
 
-                    <div class="menu unclicked" id="menu-button">
+                    <div class="menu" id="menu-button">
                         <img src="iconmonstr-menu-1-240.png">
                     </div>
 
