--- a/index.html
+++ b/index.html
@@ -50,12 +50,33 @@
                 
                 <div class="home-para-container">
                     <p class="home-para center">This website was created to showcase a portfolio of work that has been completed at PDX Code Guild. Below are photos and links to work done in this class.</p>
+
+                    <p id="please-note">Please note: Since these were projects for PDX Code Guild, they weren't made to work on mobile screens. While this website has multi-screen capability, the links are meant to be viewed on a standard desktop monitor.</p>
                 </div>
 
                 <div class="faux-divider1 center"></div>
 
                 <div class="work-pics-container center">
+
+
+                    <div class="proj">
+                        <a href="https://spectredesign.org/other-projects/lab10_any-api/index.html" target="_blank">
+                            <img class="work-pic center" src="mtg-900.jpeg">
+                        </a>
+                        <p>With this project I used api.magicthegathering.io to pull card data, filter results, and link the images to tcgplayer.com</p>
+                    </div>
+
+                    <div class="faux-divider2 center"></div>
+
+                    <div class="proj">
+                        <a href="https://spectredesign.org/other-projects/lab07_hackertyper/index.html" target="_blank">
+                            <img class="work-pic center" src="hacker-900.jpeg">
+                        </a>
+                        <p>This webpage takes snippets of an older project and prints code onto the screen using event listeners for any keypress in the &lt;html&gt; tag.</p>
+                    </div>
                     
+                    <div class="faux-divider2 center"></div>
+
                     <div class="proj">
                         <a href="amazon-scraper.PNG" target="_blank">
                             <img class="work-pic center" src="amazon-scraper-900.jpeg">
