fixed home grid layout

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <div class="work-pics-container center">
 
-                    <!-- <div class="proj">
+                    <div class="proj" id="mtg-project">
                         <a href="https://spectredesign.org/other-projects/lab10_any-api/index.html" target="_blank">
                             <img class="work-pic center" src="mtg-900.jpeg">
                         </a>
@@ -67,16 +67,16 @@
 
                     <div class="faux-divider2 center"></div>
 
-                    <div class="proj">
+                    <div class="proj" id="hackertyper">
                         <a href="https://spectredesign.org/other-projects/lab07_hackertyper/index.html" target="_blank">
                             <img class="work-pic center" src="hacker-900.jpeg">
                         </a>
                         <p>This webpage takes snippets of an older project and prints code onto the screen using event listeners for any keypress in the &lt;html&gt; tag.</p>
-                    </div> -->
+                    </div>
                     
                     <div class="faux-divider2 center"></div>
 
-                    <div class="proj">
+                    <div class="proj" id="amazon-scraper">
                         <a href="amazon-scraper.PNG" target="_blank">
                             <img class="work-pic center" src="amazon-scraper-900.jpeg">
                         </a>
@@ -85,7 +85,7 @@
                     
                     <div class="faux-divider2 center"></div>
 
-                    <div class="proj">
+                    <div class="proj" id="amazon-project">
                         <a href="amazon-project.PNG" target="_blank">
                                 <img class="work-pic center" src="amazon-project-900.jpeg">
                             </a>
