--- a/about/index.html
+++ b/about/index.html
@@ -5,11 +5,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="normalize.css"/>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="../normalize.css"/>
+        <link rel="stylesheet" type="text/css" href="../style.css"/>
         <link href="https://fonts.googleapis.com/css?family=Karla|Lato" rel="stylesheet">
         <title>Spectre Design</title>
-        <link rel="shortcut icon" href="images/iconmonstr-menu-1-240.png">
+        <link rel="shortcut icon" href="../images/iconmonstr-menu-1-240.png">
     </head>
 
     <body class="main-body">    
@@ -29,15 +29,15 @@
                 </div>
 
                 <div class="menu unclicked" id="menu-button">
-                    <img src="images/iconmonstr-menu-1-240.png">
+                    <img src="../images/iconmonstr-menu-1-240.png">
                 </div>
 
                 <div class="unclicked" id="nav-container">
                     <nav class="main-nav">
-                        <a href="index.html" class="button1 myButton"><button id="home-button">Home</button></a>
-                        <a href="about/" class="button2 myButton"><button id="about-button">About</button></a>
-                        <a href="resume/" class="button3 myButton"><button id="resume-button">Resume</button></a>
-                        <a href="contact/" class="button4 myButton"><button id="contact-button">Contact</button></a>
+                        <a href="../index.html" class="button1 myButton"><button id="home-button">Home</button></a>
+                        <a href="../about/" class="button2 myButton"><button id="about-button">About</button></a>
+                        <a href="../resume/" class="button3 myButton"><button id="resume-button">Resume</button></a>
+                        <a href="../contact/" class="button4 myButton"><button id="contact-button">Contact</button></a>
                     </nav>
                 </div>
 
@@ -101,11 +101,11 @@
                 <div class="faux-divider3 center"></div>
 
                 <div class="social-img">
-                    <a href="https://www.linkedin.com/" id="linkedin-wrapper" target="_blank"><img src="images/iconmonstr-linkedin-3-240.png" alt="Linkedin" class="linkedin center"></a>
+                    <a href="https://www.linkedin.com/" id="linkedin-wrapper" target="_blank"><img src="../images/iconmonstr-linkedin-3-240.png" alt="Linkedin" class="linkedin center"></a>
             
-                    <a href="https://github.com/corydm92/corydm92.github.io" id="github-wrapper" target="_blank"><img src="images/iconmonstr-github-3-240.png" alt="Github" class="github center"></a>
+                    <a href="https://github.com/corydm92/corydm92.github.io" id="github-wrapper" target="_blank"><img src="../images/iconmonstr-github-3-240.png" alt="Github" class="github center"></a>
                     
-                    <a href="https://www.facebook.com/" id="facebook-wrapper" target="_blank"><img src="images/iconmonstr-facebook-3-240.png" alt="Facebook" class="facebook center"></a>
+                    <a href="https://www.facebook.com/" id="facebook-wrapper" target="_blank"><img src="../images/iconmonstr-facebook-3-240.png" alt="Facebook" class="facebook center"></a>
                 </div>
 
             </footer>
